--- a/buyer-file/index.html
+++ b/buyer-file/index.html
@@ -451,7 +451,7 @@
                                 data-form-id="Sz0epCPYKNzXBOihigsx"
                                 title="Intro Call Form"
                             ></iframe>
-                            <script src="https://link.kraftonexstudios.com/js/form_embed.js"></script>
+                            <script src="https://api.leadconnectorhq.com/widget/form/Sz0epCPYKNzXBOihigsx"></script>
                         </div>
                     </div>
                 </section>
