--- a/buyer-file/index.html
+++ b/buyer-file/index.html
@@ -435,7 +435,7 @@
                         <div id="contact" style="background:linear-gradient(135deg,#59D2F3 0%,#e0f7fa 100%); border-radius:24px; box-shadow:0 0 40px 0 #59D2F3, 0 4px 24px rgba(0,0,0,0.07); padding:48px 24px; max-width:900px; margin:64px auto;">
                             <h2 style="font-family:'Teko',sans-serif;font-size:64px;font-weight:700;text-transform:uppercase;color:#17012C;text-align:center;margin-bottom:32px;letter-spacing:2px;">Contact Us</h2>
                             <iframe
-                                src="https://link.kraftonexstudios.com/widget/form/Sz0epCPYKNzXBOihigsx"
+                                src="https://api.leadconnectorhq.com/widget/form/Sz0epCPYKNzXBOihigsx"
                                 style="width:100%;height:100%;border:none;border-radius:4px"
                                 id="inline-Sz0epCPYKNzXBOihigsx" 
                                 data-layout="{'id':'INLINE'}"
