--- a/buyer-file/index.html
+++ b/buyer-file/index.html
@@ -432,11 +432,11 @@
                             </ul>
                         </div>
                         <!-- Add Kraftonexstudios Intro Call Form under the features section -->
-                        <div id="contact" style="background:linear-gradient(135deg,#59D2F3 0%,#e0f7fa 100%); border-radius:24px; box-shadow:0 0 40px 0 #59D2F3, 0 4px 24px rgba(0,0,0,0.07); padding:48px 24px; max-width:900px; margin:64px auto;">
+                        <div id="contact" style="max-width:900px; margin:400px auto -400px auto; padding:8px 0;">
                             <h2 style="font-family:'Teko',sans-serif;font-size:64px;font-weight:700;text-transform:uppercase;color:#17012C;text-align:center;margin-bottom:32px;letter-spacing:2px;">Contact Us</h2>
                             <iframe
                                 src="https://api.leadconnectorhq.com/widget/form/Sz0epCPYKNzXBOihigsx"
-                                style="width:100%;height:100%;border:none;border-radius:4px"
+                                style="width:100%;height:1000px;border:none;border-radius:4px;overflow:hidden;"
                                 id="inline-Sz0epCPYKNzXBOihigsx" 
                                 data-layout="{'id':'INLINE'}"
                                 data-trigger-type="alwaysShow"
@@ -446,7 +446,7 @@
                                 data-deactivation-type="neverDeactivate"
                                 data-deactivation-value=""
                                 data-form-name="Intro Call Form"
-                                data-height="402"
+                                data-height="1000"
                                 data-layout-iframe-id="inline-Sz0epCPYKNzXBOihigsx"
                                 data-form-id="Sz0epCPYKNzXBOihigsx"
                                 title="Intro Call Form"
