--- a/buyer-file/index.html
+++ b/buyer-file/index.html
@@ -32,6 +32,26 @@
         <link rel="stylesheet" href="assets/css/color.css">
         <!--<< Main.css >>-->
         <link rel="stylesheet" href="assets/css/main.css">
+        <style>
+@media (max-width: 600px) {
+  .header-logo img {
+    width: 120px !important;
+  }
+  .hero-section {
+    min-height: 100vh !important;
+  }
+  #about {
+    margin-bottom: 48px !important;
+  }
+}
+.service-section .feature-icon img {
+  max-width: 400px !important;
+  height: auto !important;
+}
+#contact iframe {
+  height: 600px !important;
+}
+</style>
     </head>
     <body >
 
@@ -219,14 +239,14 @@
                 </section>
                 
                 <!-- Case Study Section Start -->
-                <section class="case-study-section fix bg-cover" style="background-image: url('assets/img/case-study/bg.jpg');">
+                <section class="case-study-section fix bg-cover" style="background-image: url('');">
                     <div class="container">
                         <div class="case-study-wrapper">
                             <div class="section-title-area mb-0 section-padding pt-0">
                                 <div class="section-title">
                                     <!-- <h6 class="wow fadeInUp">Our services</h6> -->
                                      <br>
-                                    <h2 class="text-white fix tp-char-animation">
+                                    <h2 class="text-black fix tp-char-animation">
                                         Let the Bookings Roll In <br> While You Focus on the Lens.
                                     </h2>
                                 </div>
@@ -371,7 +391,7 @@
                 </section>
 
                 <!-- Service Section Start -->
-                <section class="service-section fix section-padding" id="features">
+                <section class="service-section fix" id="features">
                     <div class="container">
                         <div class="section-title-area bor-bottom">
                             <div class="section-title">
@@ -432,11 +452,11 @@
                             </ul>
                         </div>
                         <!-- Add Kraftonexstudios Intro Call Form under the features section -->
-                        <div id="contact" style="max-width:900px; margin:400px auto -400px auto; padding:8px 0;">
+                        <div id="contact" style="max-width:900px; margin:200px auto 0 auto; padding:8px 0 0 0;">
                             <h2 style="font-family:'Teko',sans-serif;font-size:64px;font-weight:700;text-transform:uppercase;color:#17012C;text-align:center;margin-bottom:32px;letter-spacing:2px;">Contact Us</h2>
                             <iframe
                                 src="https://api.leadconnectorhq.com/widget/form/Sz0epCPYKNzXBOihigsx"
-                                style="width:100%;height:1000px;border:none;border-radius:4px;overflow:hidden;"
+                                style="width:100%;height:800px;border:none;border-radius:4px;overflow:hidden;"
                                 id="inline-Sz0epCPYKNzXBOihigsx" 
                                 data-layout="{'id':'INLINE'}"
                                 data-trigger-type="alwaysShow"
@@ -446,7 +466,7 @@
                                 data-deactivation-type="neverDeactivate"
                                 data-deactivation-value=""
                                 data-form-name="Intro Call Form"
-                                data-height="1000"
+                                data-height="600"
                                 data-layout-iframe-id="inline-Sz0epCPYKNzXBOihigsx"
                                 data-form-id="Sz0epCPYKNzXBOihigsx"
                                 title="Intro Call Form"
@@ -495,7 +515,7 @@
                                 </p>
                             </div>
                             <a href="index.html" class="exolax-text">
-                                <img src="assets/img/kraftonex_logo.png" alt="img" class="wow img-custom-anim-bottom" style="width:90vw;height:auto;">
+                                <img src="assets/img/KRAFTONEX.webp" alt="img" class="wow img-custom-anim-bottom" style="width:85vw;height:auto;">
                             </a>
                         </div>
                     </div>
