--- a/buyer-file/index.html
+++ b/buyer-file/index.html
@@ -35,7 +35,12 @@
         <style>
 @media (max-width: 600px) {
   .header-logo img {
-    width: 120px !important;
+    width: 100px !important;
+  }
+  @media (max-width: 600px) {
+    .header-logo img {
+      width: 80px !important;
+    }
   }
   .hero-section {
     min-height: 100vh !important;
@@ -43,13 +48,78 @@
   #about {
     margin-bottom: 48px !important;
   }
+  .service-section .feature-icon img {
+    max-width: 300px !important;
+    height: auto !important;
+  }
+  #contact iframe {
+    height: 400px !important;
+  }
+  .case-study-section h2[style] {
+    padding-top: 32px !important;
+  }
+  .section-title-area {
+    padding-top: 32px !important;
+  }
+  .service-section .section-title-area h2 {
+    font-size: 1.5rem !important;
+  }
 }
-.service-section .feature-icon img {
-  max-width: 400px !important;
-  height: auto !important;
+@media (max-width: 600px) {
+  #contact iframe {
+    height: 700px !important;
+  }
 }
-#contact iframe {
-  height: 600px !important;
+#about {
+  margin-bottom: 64px !important;
+}
+@media (max-width: 600px) {
+  #about {
+    margin-bottom: 8px !important;
+  }
+}
+@media (max-width: 600px) {
+  .mouse-cursor {
+    display: none !important;
+  }
+}
+@media (max-width: 600px) {
+  #contact {
+    padding-bottom: 0 !important;
+    margin-bottom: 0 !important;
+    margin: 10px !important;
+  }
+  .footer-section {
+    padding-top: 8px !important;
+    margin-top: 0 !important;
+  }
+}
+.footer-section {
+  margin-top: -200px !important;
+}
+/* Make About Us and Our Features headings much bigger responsively */
+.section-title h6 {
+  font-size: 4rem !important;
+}
+.section-title h2 {
+  font-size: 4rem !important;
+  line-height: 1.1 !important;
+}
+@media (max-width: 900px) {
+  .section-title h2 {
+    font-size: 2.5rem !important;
+  }
+  .section-title h6 {
+    font-size: 1.2rem !important;
+  }
+}
+@media (max-width: 600px) {
+  .section-title h2 {
+    font-size: 1.5rem !important;
+  }
+  .section-title h6 {
+    font-size: 1rem !important;
+  }
 }
 </style>
     </head>
@@ -220,7 +290,7 @@
         <div id="smooth-wrapper">
             <div id="smooth-content">
                  <!-- Hero Section Start -->
-                <section class="hero-section hero-1 bg-cover" id="hero" style="background-image: url('assets/img/hero/hero-1.webp'); margin-bottom: 60px;">
+                <section class="hero-section hero-1 bg-cover" id="hero" style="background-image: url('assets/img/hero/hero-1.webp'); margin-bottom: 20px;">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-xl-7">
@@ -246,7 +316,7 @@
                                 <div class="section-title">
                                     <!-- <h6 class="wow fadeInUp">Our services</h6> -->
                                      <br>
-                                    <h2 class="text-black fix tp-char-animation">
+                                    <h2 class="text-black fix tp-char-animation" style="padding: 10px 10px;">
                                         Let the Bookings Roll In <br> While You Focus on the Lens.
                                     </h2>
                                 </div>
@@ -396,7 +466,7 @@
                         <div class="section-title-area bor-bottom">
                             <div class="section-title">
                                 <h6 class="wow">our features</h6>
-                                <h2 class="tp-char-animation">What <img src="assets/img/asterisk.svg" alt="img"><span>kraftonexstudios</span> does for photographers</h2> 
+                                <h2 class="tp-char-animation">What <span>kraftonexstudios</span> does for photographers</h2> 
                             </div>
                             <a href="#contact" class="theme-btn wow fadeInUp" data-wow-delay=".5s">
                                 <span class="icon-1">
@@ -452,7 +522,7 @@
                             </ul>
                         </div>
                         <!-- Add Kraftonexstudios Intro Call Form under the features section -->
-                        <div id="contact" style="max-width:900px; margin:200px auto 0 auto; padding:8px 0 0 0;">
+                        <div id="contact" style="max-width:900px; margin:80px auto 0 auto; padding:8px 0 0 0;">
                             <h2 style="font-family:'Teko',sans-serif;font-size:64px;font-weight:700;text-transform:uppercase;color:#17012C;text-align:center;margin-bottom:32px;letter-spacing:2px;">Contact Us</h2>
                             <iframe
                                 src="https://api.leadconnectorhq.com/widget/form/Sz0epCPYKNzXBOihigsx"
